--- a/css/styles.css
+++ b/css/styles.css
@@ -93,3 +93,39 @@ p {
     color: #0199a7;
     margin-bottom: 10px;
 }
+
+
+form {
+    max-width: 600px;
+    margin: auto;
+}
+
+form label {
+    font-weight: bold;
+    display: block;
+    margin-top: 15px;
+}
+
+form input[type="text"],
+form input[type="email"] {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+form button {
+    padding: 10px 15px;
+    background-color: #0199a7;
+    color: white;
+    border: none;
+    margin-top: 15px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #017a85;
+}
